--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
   - git submodule init
   - git submodule update
   - pip install -r travis-requirements.txt
-  - rm -Rf partnership
+  - rm -Rf dissertation
   - ln -s $PROJECT_DIR dissertation
 
 before_script:
