--- a/.travis.yml
+++ b/.travis.yml
@@ -27,11 +27,11 @@ before_script:
   - echo >> .env
   - echo "POSTGRES_USER = 'postgres'" >> .env
   - echo "POSTGRES_PASSWORD = ''" >> .env
-  - python3 manage.py compilemessages
   - psql -c 'create database osis_local;' -U postgres
   - "curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter"
   - "chmod +x ./cc-test-reporter"
   - "./cc-test-reporter before-build"
+  - cc-test-reporter-format-coverage --prefix /tmp/osis
 
 script:
   - python3 manage.py compilemessages && coverage run manage.py test --exclude-tag=selenium
