--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ install:
   - cd osis
   - git submodule init
   - git submodule update
-  - pip install -r travis-requirements.txt
+  - pip install -r requirements.txt
   - rm -Rf dissertation
   - ln -s $PROJECT_DIR dissertation
 
