--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ before_script:
   - ./cc-test-reporter before-build
 
 script:
-  - python3 manage.py compilemessages && coverage run manage.py test --exclude-tag=selenium --no-logs
+  - python3 manage.py compilemessages && coverage run manage.py test dissertation --exclude-tag=selenium --no-logs
 
 after_script:
   - coverage xml
