travis fix gdal missing

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,9 @@ services:
   - postgresql
 addons:
     postgresql: "9.6"
+    apt:
+      packages:
+        - postgresql-9.6-postgis-2.4
 
 install:
   - export PROJECT_DIR=`pwd`
